# GameEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.user.901330f  LICENSE  kedama.mdj  目标.txt  记事本.txt
kedama/: AssetManager.cpp  AssetManager.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Config.hpp  Define.hpp  Engine.cpp  Engine.hpp  GLMInclude.hpp  GameObject.cpp  GameObject.hpp  IWindow.hpp  Include.hpp  Log.cpp  Log.hpp  SceneManager.cpp  SceneManager.hpp  Transform.cpp  Transform.hpp
kedama/Animation/Math/: CubicSplineInterpolator.hpp  IInterpolator.hpp
kedama/BoneSystem/: Bone.cpp  Bone.hpp  CMakeLists.txt  ISkinner.hpp  Joint.cpp  Joint.hpp
kedama/FileSystem/: CMakeLists.txt  FileManager.cpp  FileManager.hpp  FileSystem.cpp  FileSystem.hpp  IFileSystem.hpp  LocalFile.cpp  LocalFile.hpp  LocalFileStream.cpp  LocalFileStream.hpp  LocalFileSystem.cpp  LocalFileSystem.hpp  Stream.cpp  Stream.hpp
kedama/FileSystem/Interface/: IFile.hpp  IFileSystem.hpp
kedama/GameObject/: Camera.cpp  Camera.hpp  GameObject.cpp  GameObject.hpp  GameObjectClass.hpp  Light.cpp  Light.hpp  Mesh.cpp  Mesh.hpp  Model.hpp  Transform.cpp  Transform.hpp
kedama/IO/: CMakeLists.txt  IStream.hpp  Path.cpp  Path.hpp
kedama/IO/FileSystem/: FileSystemContext.cpp  FileSystemContext.hpp  IFileSystem.hpp  LocalFileStream.cpp  LocalFileStream.hpp  LocalFileSystem.cpp  LocalFileSystem.hpp
kedama/PhysicsSystem/: CMakeLists.txt  PhysicsSystem.cpp  PhysicsSystem.hpp
kedama/RenderSystem/: Batch.cpp  Batch.hpp  CommandBuffer.cpp  CommandBuffer.hpp  FrameBuffer.cpp  FrameBuffer.hpp  IIndexBuffer.hpp  IRenderBuffer.hpp  IRenderSystem.hpp  IRenderSystemFactory.hpp  IShader.hpp  ITexture.hpp  ITexture2D.hpp  ITextureBase.hpp  ITextureCube.hpp  IVertexBuffer.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  MeshRenderer.cpp  MeshRenderer.hpp  Model.cpp  Model.hpp  PropertyValue.cpp  PropertyValue.hpp  PropertyValueVisitor.cpp  PropertyValueVisitor.hpp  RenderCommand.hpp  RenderPipeline.hpp  RenderStream.cpp  RenderStream.hpp  RenderSystem.cpp  RenderSystem.hpp  RenderSystemClass.hpp  RenderSystemFactoryManager.cpp  RenderTarget.hpp  RendererFactoryManager.cpp  RendererFactoryManager.hpp  Shader.cpp  (+5 more)
kedama/RenderSystem/GL/: CMakeLists.txt  GBuffer.cpp  GBuffer.hpp  GLControl.cpp  GLControl.hpp  GLDeferredRenderer.cpp  GLDeferredRenderer.hpp  GLForwardRenderer.cpp  GLForwardRenderer.hpp  GLFrameBuffer.cpp  GLFrameBuffer.hpp  GLIndexBuffer.cpp  GLIndexBuffer.hpp  GLLightNative.cpp  GLLightNative.hpp  GLMaterialNative.cpp  GLMaterialNative.hpp  GLMeshBuffer.cpp  GLMeshBuffer.hpp  GLMeshNative.cpp  GLMeshNative.hpp  GLPostProcessor.cpp  GLPostProcessor.hpp  GLRenderStream.cpp  GLRenderStream.hpp  GLRenderSystem.cpp  GLRenderSystem.hpp  GLRenderSystemClass.hpp  GLRenderSystemFactory.cpp  GLRenderSystemFactory.hpp  GLRendererFactory.cpp  GLRendererFactory.hpp  GLShader.cpp  GLShader.hpp  GLSkinnedMeshBuffer.cpp  GLSkinnedMeshBuffer.hpp  GLSkinner.cpp  GLSkinner.hpp  GLTexture.cpp  GLTexture.hpp  (+13 more)
kedama/RenderSystem/GL/Shader/: ForwardRenderDefaultShader.hpp  GLSLPerprocessor.cpp  ShaderLib.hpp  kedama_glsl.cpp  skinning_glsl.cpp
kedama/RenderSystem/GL/Visitor/: GLStd140UniformBlockSizeVisitor.inl  GLStd140UniformBlockVisitor.inl
kedama/RenderSystem/GL/utility/: GLSmartObject.hpp
kedama/RenderSystem/GLES/: GLESRenderSystem.hpp  GLESRenderSystemFactory.cpp  SDLWindow.hpp
kedama/RenderSystem/Interface/: IControl.hpp  IDeferredRenderer.hpp  IForwardRenderer.hpp  IMeshBuffer.hpp  IPostProcessor.hpp  IRendererFactory.hpp  IShader.hpp  ITexture.hpp  ITexture2D.hpp  IWindow.hpp
kedama/utility/: Cloneable.hpp  Singleton.hpp
kedama/utility/Exception/: CMakeLists.txt  ExceptionCommon.hpp  RuntimeException.cpp  RuntimeException.hpp
kedama/utility/Exception/Linux/: Exception.cpp  Exception.hpp
kedama/utility/Exception/MSVC/: Exception.cpp  Exception.hpp
kedama/utility/Exception/Windows/: Exception.cpp  Exception.hpp
lib/: CMakeLists.txt
lib/msvc/: version.txt
old/kedama/: CMakeLists.txt  Define.hpp  Engine.hpp
old/kedama/FileSystem/: FileManager.hpp  LocalFileSystem.cpp  LocalFileSystem.hpp
old/kedama/RenderSystem/: Batch.hpp  BufferEnum.hpp  FrameBuffer.cpp  FrameBuffer.hpp  IIndexBuffer.hpp  IRenderBuffer.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  RenderStream.hpp  RenderSystemFactoryManager.cpp  RenderSystemFactoryManager.hpp  RenderTarget.hpp  VertexBuffer.hpp  Viewport.cpp  Viewport.hpp
old/kedama/RenderSystem/GL/: GLFrameBuffer.hpp  GLIndexBuffer.hpp  GLTextureCube.hpp  GLVertexBuffer.cpp  GLVertexBuffer.hpp  GLVertexBuffer.inl  UBOModelMatrixManager.hpp
old/kedama/RenderSystem/GL/Shader/: DefaultShader.cpp
old/kedama/RenderSystem/GLES/: CMakeLists.txt  GLESRenderSystem.cpp  GLESRenderSystemFactory.hpp  SDLWindow.cpp
test/: CMakeLists.txt  init.cpp
