cmake_minimum_required(VERSION 2.8)
project(Kedama_test)

set(TEST_SOURCE Init.cpp)
set(LINK_LIBS KedamaEngine)

include_directories(${PROJECT_SOURCE_DIR}/../kedama)

if(${CMAKE_SYSTEM_NAME} STREQUAL Android)
    set(LINK_LIBS ${LINK_LIBS} Kedama_GLESRenderSystem)
else()
     set(LINK_LIBS ${LINK_LIBS} Kedama_GLRenderSystem)
endif()

if(C4DROID)
	set(BUILD_SHARED_LIBS ON)
	foreach(i ${TEST_SOURCE})
		add_library("Kedama_test_${i}" ${i})
		target_link_libraries("Kedama_test_${i}" ${LINK_LIBS})
	endforeach()
	set(BUILD_SHARED_LIBS OFF)
else()
	foreach(i ${TEST_SOURCE})
        add_executable("Kedama_test_${i}" ${i})
		target_link_libraries("Kedama_test_${i}" ${LINK_LIBS})
	endforeach()
endif()
